<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:text="@string/dialog_message"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/replace_image_button"
        android:layout_below="@+id/text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/dialog_retake_image"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners_color_primary"
        android:padding="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallery_image_button"
        android:layout_below="@+id/text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/dialog_select_image"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners_color_primary"
        android:padding="15dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</RelativeLayout>